k8s_config/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  labels:
    service: redis
    env: dev
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy: {}
  template:
    metadata:
      # annotations:
      creationTimestamp: null
      labels:
        service: redis
        env: dev
        app: redis
    spec:
      nodeSelector:
        instance_type: on_demand
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
