k8s_config/service-ipinfo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  labels:
    service: service-ipinfo
    env: dev
    app: service-ipinfo
  name: service-ipinfo
spec:
  replicas: 2
  selector:
    matchLabels:
      service: service-ipinfo
  strategy: {}
  template:
    metadata:
      # annotations:
      labels:
        service: service-ipinfo
        env: dev
        app: service-ipinfo
    spec:
      containers:
        - name: service-container-ipinfo
          image: 146632099925.dkr.ecr.eu-west-1.amazonaws.com/service.ipinfo:latest
          imagePullPolicy: IfNotPresent # IfNotPresent # Never needed for local / dev repo access on minikube. IfNotPresent needed for docker-desktop k8s
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /healthr
              port: 8081
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /healthl
              port: 8081
            initialDelaySeconds: 5
          resources:  # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
            requests:
              cpu: 0.5
              memory: 250M
            limits:
              cpu: 1.0
              memory: 500M
      restartPolicy: Always
status: {}
