k8s_config/service-ipinfo-service-alb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:   # user data / context - not used by k8s https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    service: service-ipinfo-alb
    env: dev
    app: service-ipinfo-alb
  name: service-ipinfo-alb
spec:
  type: NodePort
  # externalTrafficPolicy: Local # https://docs.microsoft.com/en-us/azure/aks/load-balancer-standard#maintain-the-clients-ip-on-inbound-connections
  ports:
    - name: "80"
      port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    service: service-ipinfo # service select pods that have this label to route traffic amongst things
status:
  loadBalancer: {}
