k8s_config/service-ipinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:   # user data / context - not used by k8s
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    service: service-ipinfo
    env: dev
    app: service-ipinfo
  name: service-ipinfo
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Local # https://docs.microsoft.com/en-us/azure/aks/load-balancer-standard#maintain-the-clients-ip-on-inbound-connections
  ports:
    - name: "81"
      port: 81
      targetPort: 8081
  selector:
    service: service-ipinfo # service select pods that have this label to route traffic amongst things
status:
  loadBalancer: {}
